# analyze_agents4science

./: .gitignore  README.md  pyproject.toml
analyzebasic/: run_analyzer.py
analyzebasic/utils/: utils_analyzer.py  utils_display.py  utils_plotascii.py
outputs/figures/: page_count.txt  we_count_per_page_avg.txt
resources/: papers.json
