[project]
name = "analyze_agents4science"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "hatchling>=1.27.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "statistics>=1.0.3.5",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[project.scripts]
run-analyzer = "src.run_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ✅ Tell Hatchling where your package is
[tool.hatch.build.targets.wheel]
packages = ["analyzebasic/src"]

# ✅ Optional — include your resources folder (papers.json)
[tool.hatch.build]
include = ["analyzebasic/resources/*"]
